# defer

./: .gitignore  .oxfmtrc.json  CLAUDE.md  CONTEXT.md  README.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/desktop/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/clipboard/: auto-clear.test.ts  auto-clear.ts
apps/desktop/src/onboarding/: bip39-wordlist.test.ts  bip39-wordlist.ts  create-vault.ts  (+8 more)
apps/desktop/tests/: init-sql-for-node.ts
apps/relay/: README.md  package.json  tsconfig.json  vitest.config.ts  wrangler.toml  wrangler.toml.template
apps/relay/src/: auth.ts  env.ts  errors.ts  index.ts  pairing-token-store.ts  rate-limits.ts  relay-api.ts  vault-relay.ts
apps/relay/test/: cors.test.ts  deletion-control.test.ts  deletion-data-plane.test.ts  devices.test.ts  error-envelope.test.ts  events.test.ts  health.test.ts  logging.test.ts  pairing.test.ts  rate-limiting.test.ts
docs/adr/: 0001-local-first-blind-cloudflare-relay.md  0002-event-log-sync.md  0003-crypto-baseline.md  0004-monorepo-shared-typescript-core.md  0005-vault-deletion-time-delayed-cancellation.md  0006-canonical-signed-bytes-and-aad.md  0007-relay-transport-conventions.md  0008-vault-restoration-auth.md
docs/agents/: domain.md
tests/e2e/: package.json  tsconfig.json  vitest.config.ts
tests/e2e/test/: end-to-end.test.ts
(+71 files in other folders)
